Fix spacing
This actually works, I did it wrong last time.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 body{
 	background-color:#ddd;
 	font-family:Josefin Sans;
-	margin:8.8vh 0 0 0;
+	margin:9vh 0 0 0;
 	overflow-x:hidden;
 	overscroll-behavior:none;
 	text-align:center;
@@ -12,7 +12,6 @@ body{
 	color:#666;
 	font-size:150px;
 	left:0;
-	margin:0 0 2vh 0;
 	position:fixed;
 	text-shadow:4px 4px 8px #888;
 	top:0;
